[gd_scene load_steps=73 format=3 uid="uid://brvlc7gprp6ia"]

[ext_resource type="Script" path="res://scenes/scripts/level_2.gd" id="1_u46bd"]
[ext_resource type="Texture2D" uid="uid://botpdj56wpbxt" path="res://images/Mapa_assets/Levels/level_2/mapa.png" id="1_wd05n"]
[ext_resource type="Texture2D" uid="uid://by87d6idxb3kt" path="res://images/Mapa_assets/Others/Puntuacion/0.png" id="3_01jco"]
[ext_resource type="Texture2D" uid="uid://d2jk6yh0sdt6v" path="res://images/Mapa_assets/Others/Puntuacion/1.png" id="4_50u5f"]
[ext_resource type="Texture2D" uid="uid://hclkgxsvyfao" path="res://images/Mapa_assets/Others/Puntuacion/2.png" id="5_rymbh"]
[ext_resource type="Texture2D" uid="uid://by74nf2tlcses" path="res://images/Mapa_assets/Others/Puntuacion/3.png" id="6_iv5jk"]
[ext_resource type="Texture2D" uid="uid://bf85f3sjahhkd" path="res://images/Mapa_assets/Others/Puntuacion/2(1).png" id="7_2a76c"]
[ext_resource type="Texture2D" uid="uid://dmqh18q0qj2y0" path="res://images/Mapa_assets/Others/Puntuacion/0(1).png" id="7_4dis5"]
[ext_resource type="Texture2D" uid="uid://cxkxyunjgexrv" path="res://images/Mapa_assets/Others/Puntuacion/4.png" id="7_vvkyw"]
[ext_resource type="Texture2D" uid="uid://c8w07ahay0ugm" path="res://images/Mapa_assets/Others/Puntuacion/1(1).png" id="8_0vneg"]
[ext_resource type="Texture2D" uid="uid://br3colaaasukr" path="res://images/Mapa_assets/Others/Puntuacion/3(1).png" id="8_b1r4y"]
[ext_resource type="Texture2D" uid="uid://dagytrx7oqedq" path="res://images/Mapa_assets/Levels/level_2/barra.png" id="9_ar73t"]
[ext_resource type="Texture2D" uid="uid://b660q8ij0nmbp" path="res://images/Mapa_assets/Others/Puntuacion/5.png" id="10_6jv06"]
[ext_resource type="Texture2D" uid="uid://d05f1km8wxs48" path="res://images/Mapa_assets/Others/Puntuacion/6.png" id="11_8puxg"]
[ext_resource type="Texture2D" uid="uid://d2oykjcwovx28" path="res://images/Mapa_assets/Others/Puntuacion/7.png" id="14_8kdyu"]
[ext_resource type="Texture2D" uid="uid://be3frcljko0xd" path="res://images/Mapa_assets/Others/Puntuacion/8.png" id="15_bpk4b"]
[ext_resource type="PackedScene" uid="uid://c28g1ir66ceby" path="res://scenes/objects/flower.tscn" id="16_xb2xd"]
[ext_resource type="Texture2D" uid="uid://xeudk2u38dcv" path="res://images/Mapa_assets/Others/Puntuacion/9.png" id="16_ymcnv"]
[ext_resource type="Texture2D" uid="uid://dhxa727nt6pf4" path="res://images/Mapa_assets/Others/Puntuacion/10.png" id="17_0m87k"]
[ext_resource type="Texture2D" uid="uid://w5j4an4e7x4a" path="res://images/Mapa_assets/Levels/level_2/cesta.png" id="17_ht834"]
[ext_resource type="Texture2D" uid="uid://b4t7tf4fjll0s" path="res://images/Mapa_assets/Others/Puntuacion/11.png" id="18_hbfik"]
[ext_resource type="Texture2D" uid="uid://nths2xqy56le" path="res://images/Mapa_assets/Levels/level_2/flowers/flor_red_1.png" id="18_wyub0"]
[ext_resource type="Texture2D" uid="uid://4vqvbxhi4v34" path="res://images/Mapa_assets/Others/Puntuacion/12.png" id="19_0nadh"]
[ext_resource type="Texture2D" uid="uid://cewhcupmw6dhu" path="res://images/Mapa_assets/Levels/level_2/flowers/flor_lila_1.png" id="19_bf1th"]
[ext_resource type="Texture2D" uid="uid://u1go8x0apghn" path="res://images/Mapa_assets/Levels/level_2/+1.png" id="19_mkh8j"]
[ext_resource type="Texture2D" uid="uid://crhtgilm8bvh3" path="res://images/Mapa_assets/Others/Puntuacion/13.png" id="20_3dnyi"]
[ext_resource type="Texture2D" uid="uid://cmbjflrs3uwkm" path="res://images/Mapa_assets/Others/Puntuacion/14.png" id="21_ofton"]
[ext_resource type="Texture2D" uid="uid://ddm7pxagju8sd" path="res://images/Mapa_assets/Others/Puntuacion/15.png" id="22_354ju"]
[ext_resource type="Texture2D" uid="uid://bwta7raakdunt" path="res://images/Mapa_assets/Others/Puntuacion/16.png" id="23_a4wo1"]
[ext_resource type="Shader" path="res://resources/character_shader.gdshader" id="24_bqyy2"]
[ext_resource type="Texture2D" uid="uid://d0p0mn2cg3lms" path="res://images/Personajes/Personas/Choose/tio_rgb.png" id="25_2pi03"]
[ext_resource type="Script" path="res://scenes/scripts/Character_colors.gd" id="26_4g61n"]
[ext_resource type="Texture2D" uid="uid://cxhl0iam5e52w" path="res://images/Personajes/Personas/Choose/tia_rgb.png" id="27_5ry7o"]
[ext_resource type="PackedScene" uid="uid://dj0atrm2o2f7f" path="res://scenes/others/Global_Scene.tscn" id="33_mo3ri"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bf52x"]
atlas = ExtResource("6_iv5jk")
region = Rect2(4, 5, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_nksif"]
atlas = ExtResource("5_rymbh")
region = Rect2(5, 8, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfgey"]
atlas = ExtResource("4_50u5f")
region = Rect2(5, 5, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv2do"]
atlas = ExtResource("3_01jco")
region = Rect2(5, 5, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_vklsf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf52x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf52x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf52x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nksif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nksif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfgey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfgey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv2do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv2do")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"count",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xdwc0"]
atlas = ExtResource("7_4dis5")
region = Rect2(33, 32, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnrsy"]
atlas = ExtResource("8_0vneg")
region = Rect2(28, 32, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn8lv"]
atlas = ExtResource("7_2a76c")
region = Rect2(29, 45, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_8garh"]
atlas = ExtResource("8_b1r4y")
region = Rect2(31, 37, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_uise0"]
atlas = ExtResource("7_vvkyw")
region = Rect2(37, 50, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy5ng"]
atlas = ExtResource("10_6jv06")
region = Rect2(33, 34, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_quo1y"]
atlas = ExtResource("11_8puxg")
region = Rect2(53, 61, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_iodn8"]
atlas = ExtResource("14_8kdyu")
region = Rect2(26, 40, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sood"]
atlas = ExtResource("15_bpk4b")
region = Rect2(25, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaoou"]
atlas = ExtResource("16_ymcnv")
region = Rect2(24, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckbkq"]
atlas = ExtResource("17_0m87k")
region = Rect2(33, 32, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_1leos"]
atlas = ExtResource("18_hbfik")
region = Rect2(15, 32, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_vphft"]
atlas = ExtResource("19_0nadh")
region = Rect2(13, 46, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkyma"]
atlas = ExtResource("20_3dnyi")
region = Rect2(15, 38, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_e20hs"]
atlas = ExtResource("21_ofton")
region = Rect2(21, 51, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxs8y"]
atlas = ExtResource("22_354ju")
region = Rect2(15, 35, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_emqni"]
atlas = ExtResource("23_a4wo1")
region = Rect2(37, 62, 60, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_mraxs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdwc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnrsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn8lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8garh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uise0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy5ng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quo1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iodn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sood")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaoou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckbkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1leos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vphft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkyma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e20hs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxs8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emqni")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i0sf5"]
shader = ExtResource("24_bqyy2")
shader_parameter/Face_color = Color(0.706, 0.322, 0.227, 1)
shader_parameter/Body_color = Color(0.878, 0.804, 0.663, 1)
shader_parameter/Hair_color = Color(0.545, 0.369, 0.235, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yr2db"]
size = Vector2(134, 63.4088)

[sub_resource type="Animation" id="Animation_uyn72"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-44, 81)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../problem_solver:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_utgmt"]
resource_name = "bot_left"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(574, 400), Vector2(531, 334), Vector2(456, 282), Vector2(401, 254), Vector2(339, 265), Vector2(305.5, 319), Vector2(266.25, 389.5), Vector2(233.125, 468.25), Vector2(215, 554)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-22.5147, -34.9066]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../problem_solver:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_8yqn4"]
resource_name = "bot_right"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(574, 400), Vector2(622, 366), Vector2(716, 341), Vector2(803, 359), Vector2(852, 412), Vector2(890, 461), Vector2(886, 534)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [22.0522, 34.9066]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../problem_solver:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_a5gli"]
resource_name = "top_left"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1, 1.1, 1.2, 1.3, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-44, 93), Vector2(321, 95), Vector2(424, 103), Vector2(485, 120), Vector2(526, 150), Vector2(549, 200), Vector2(574, 400)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 1.3, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 10.8559, 15.5422, 22.0522]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../problem_solver:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_m1004"]
resource_name = "top_right"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1, 1.1, 1.2, 1.3, 1.5, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1214, 96), Vector2(841, 97), Vector2(717, 94), Vector2(657, 114), Vector2(614, 147), Vector2(597, 211), Vector2(587, 291), Vector2(574, 400)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 1.4, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -10.9432, -15.5334, -22.5147]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../problem_solver:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1g1nu"]
_data = {
"RESET": SubResource("Animation_uyn72"),
"bot_left": SubResource("Animation_utgmt"),
"bot_right": SubResource("Animation_8yqn4"),
"top_left": SubResource("Animation_a5gli"),
"top_right": SubResource("Animation_m1004")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ghw32"]
atlas = ExtResource("19_mkh8j")
region = Rect2(10, 0, 50, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_bst7s"]
atlas = ExtResource("19_mkh8j")
region = Rect2(10, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxm1s"]
atlas = ExtResource("19_mkh8j")
region = Rect2(10, 10, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaft3"]
atlas = ExtResource("19_mkh8j")
region = Rect2(10, 20, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbo2k"]
atlas = ExtResource("19_mkh8j")
region = Rect2(10, 30, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_72uvv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghw32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bst7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxm1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaft3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbo2k")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_275ys"]
size = Vector2(48, 55)

[node name="side_picker" type="Node2D"]
script = ExtResource("1_u46bd")

[node name="Mapa" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 652.0

[node name="TextureRect" type="TextureRect" parent="Mapa"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.0
offset_top = 70.0
offset_right = 15.0
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wd05n")

[node name="Mapa" type="Sprite2D" parent="Mapa/TextureRect"]
position = Vector2(624.5, 545.25)
scale = Vector2(21.6724, 12.125)
texture = ExtResource("1_wd05n")
region_enabled = true
region_rect = Rect2(172, 137, 58, 12)

[node name="Mapa2" type="Sprite2D" parent="Mapa/TextureRect"]
position = Vector2(615.5, -30)
scale = Vector2(43.5, 8.75)
texture = ExtResource("1_wd05n")
region_enabled = true
region_rect = Rect2(181, 9, 30, 15)

[node name="countdown" type="Node2D" parent="."]

[node name="Hidden_timer" type="Timer" parent="countdown"]
one_shot = true
autostart = true

[node name="countdown" type="AnimatedSprite2D" parent="countdown"]
z_index = 1
position = Vector2(580, 327)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_vklsf")
animation = &"count"
autoplay = "count"

[node name="Points" type="AnimatedSprite2D" parent="countdown"]
position = Vector2(571, 87)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_mraxs")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(578, 442)
scale = Vector2(5, 5)
script = ExtResource("26_4g61n")

[node name="Character_m" type="Sprite2D" parent="Node2D"]
material = SubResource("ShaderMaterial_i0sf5")
texture = ExtResource("25_2pi03")
flip_h = true

[node name="Character_d" type="Sprite2D" parent="Node2D"]
visible = false
material = SubResource("ShaderMaterial_i0sf5")
texture = ExtResource("27_5ry7o")
flip_h = true

[node name="barra" type="Area2D" parent="."]
position = Vector2(574, 466.67)
scale = Vector2(1.23, 1.23)

[node name="Guion" type="Sprite2D" parent="barra"]
position = Vector2(0.813008, -15.4472)
scale = Vector2(6, 6)
texture = ExtResource("9_ar73t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="barra"]
position = Vector2(9.15527e-05, -13.7044)
shape = SubResource("RectangleShape2D_yr2db")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="problem_solver" type="Node2D" parent="."]
visible = false

[node name="Flower" parent="." instance=ExtResource("16_xb2xd")]
position = Vector2(-44, 81)

[node name="Animaciones" type="AnimationPlayer" parent="Flower"]
libraries = {
"": SubResource("AnimationLibrary_1g1nu")
}
speed_scale = 0.5

[node name="cesta_red" type="Area2D" parent="."]
position = Vector2(873, 549)
scale = Vector2(2, 2)

[node name="red" type="AnimatedSprite2D" parent="cesta_red"]
position = Vector2(1, -50.5)
sprite_frames = SubResource("SpriteFrames_72uvv")
frame = 5
frame_progress = 1.0

[node name="Cesta_red" type="Sprite2D" parent="cesta_red"]
position = Vector2(3.725, -3.975)
rotation = -0.0698132
scale = Vector2(1.5, 1.5)
texture = ExtResource("17_ht834")
region_enabled = true
region_rect = Rect2(7, 25, 49, 34)

[node name="FlorRed1" type="Sprite2D" parent="cesta_red/Cesta_red"]
position = Vector2(4.85, -1.01667)
rotation = 0.270526
scale = Vector2(0.7, 0.7)
texture = ExtResource("18_wyub0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="cesta_red"]
visible = false
position = Vector2(5, -7.5)
shape = SubResource("RectangleShape2D_275ys")

[node name="cesta_purple" type="Area2D" parent="."]
position = Vector2(217, 553)
scale = Vector2(2, 2)

[node name="purple" type="AnimatedSprite2D" parent="cesta_purple"]
position = Vector2(1, -50.5)
sprite_frames = SubResource("SpriteFrames_72uvv")
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="cesta_purple"]
visible = false
position = Vector2(5, -7.5)
shape = SubResource("RectangleShape2D_275ys")

[node name="Cesta_lila" type="Sprite2D" parent="cesta_purple"]
position = Vector2(6.18, 0)
rotation = 0.0698132
scale = Vector2(1.5, 1.5)
texture = ExtResource("17_ht834")
region_enabled = true
region_rect = Rect2(9, 25, 48, 34)

[node name="FlorLila1" type="Sprite2D" parent="cesta_purple/Cesta_lila"]
position = Vector2(2.54667, -1.33333)
rotation = 0.349066
scale = Vector2(0.7, 0.7)
texture = ExtResource("19_bf1th")

[node name="Camera" parent="." instance=ExtResource("33_mo3ri")]
visible = false

[connection signal="animation_finished" from="countdown/countdown" to="." method="_on_countdown_animation_finished"]
[connection signal="frame_changed" from="countdown/Points" to="." method="_on_points_animation_changed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_timeout"]
[connection signal="animation_finished" from="Flower/Animaciones" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="cesta_red" to="." method="_on_cesta_red_body_entered"]
[connection signal="body_entered" from="cesta_purple" to="." method="_on_cesta_purple_body_entered"]
